--- a/client/src/less/products.less
+++ b/client/src/less/products.less
@@ -51,6 +51,7 @@ input:-ms-input-placeholder, textarea:-ms-input-placeholder{  /* Internet Explor
 table {
     th {
         font-size: 14px;
+        // text-align: center;
     }
     td {
         font-size: 12px;
@@ -70,6 +71,7 @@ table {
             td {
                 word-wrap: break-word;
                 word-break: break-all;
+                height: 100px;
     
                 &:last-child {
                     text-align: center;
@@ -79,6 +81,10 @@ table {
                     max-height: 80px;
                     vertical-align: middle;
                     overflow-y: auto;
+                }
+
+                img {
+                    max-height: 100%;
                 }
             }
 
