--- a/client/src/views/commonsoft.html
+++ b/client/src/views/commonsoft.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <base target="_blank" />
   <title>闪马智能产品信息系统</title>
+  <link rel="icon" href="/imgs/favicon/favicon.png" type="image/png">
   <link rel="stylesheet" href="./stylesheet/layout.css">
   <link rel="stylesheet" href="./stylesheet/products.css">
   <link href="./libs/css/bootstrap.min.css" rel="stylesheet">
@@ -95,7 +96,7 @@
   </svg>
 
   <main class="d-flex flex-nowrap">
-    <div id = "navbar" class="sidebar flex-shrink-0 p-3 bg-white" style="width: 280px;"></div>
+    <div id = "navbar" class="sidebar flex-shrink-0 p-3 bg-white"></div>
     
     <div class="b-example-divider b-example-vr"></div>
 
@@ -353,10 +354,9 @@
     </div>
   </div>
 
-  <script src="./javascript/filesaver.min.js"></script>
-  <script src="./javascript/xlsx.full.min.js"></script>
+  <script src="./libs/js/xlsx.full.min.js"></script>
   <script src="./javascript/config.js"></script>
-  <script src="./javascript/popperjs_v2.11.6.js"></script>
+  <script src="./libs/js/popperjs_v2.11.6.js"></script>
   <script src="./libs/js/bootstrap.min.js"></script>
   <script src="./javascript/products_core.js"></script>
   <script src="./javascript/commonsoft.js"></script>
