--- a/client/src/views/components.html
+++ b/client/src/views/components.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <base target="_blank" />
   <title>闪马智能产品信息系统</title>
+  <link rel="icon" href="/imgs/favicon/favicon.png" type="image/png">
   <link rel="stylesheet" href="./stylesheet/layout.css">
   <link rel="stylesheet" href="./stylesheet/components.css">
   <link href="./libs/css/bootstrap.min.css" rel="stylesheet">
@@ -92,7 +93,7 @@
   </svg>
 
   <main class="d-flex flex-nowrap">
-    <div id = "navbar" class="sidebar flex-shrink-0 p-3 bg-white" style="width: 280px;"></div>
+    <div id = "navbar" class="sidebar flex-shrink-0 p-3 bg-white"></div>
     
     <div class="b-example-divider b-example-vr"></div>
 
@@ -148,7 +149,7 @@
 
 
   <script src="./javascript/config.js"></script>
-  <script src="./javascript/popperjs_v2.11.6.js"></script>
+  <script src="./libs/js/popperjs_v2.11.6.js"></script>
   <script src="./libs/js/bootstrap.min.js"></script>
   <script src="./javascript/ItemTable.js"></script>
   <script src="./javascript/components.js"></script>
