--- a/client/src/views/layout.html
+++ b/client/src/views/layout.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <base target="_blank" />
     <title>闪马智能产品信息系统</title>
+    <link rel="icon" href="/imgs/favicon/favicon.png" type="image/png">
     <link rel="stylesheet" href="./stylesheet/layout.css">
     <link href="./libs/css/bootstrap.min.css" rel="stylesheet">
 </head>
