--- a/client/src/views/index.html
+++ b/client/src/views/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>login</title>
+    <link rel="icon" href="/imgs/favicon/favicon.png" type="image/png">
     <link rel="stylesheet" href="./stylesheet/common.css">
     <link rel="stylesheet" href="./stylesheet/login.css">
     <!-- <link rel="stylesheet" href="./libs/css/bootstrap.min.css"> -->
