--- a/client/src/views/spider.html
+++ b/client/src/views/spider.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>微博数据源配置</title>
+    <link rel="icon" href="/imgs/favicon/favicon.png" type="image/png">
     <link rel="stylesheet" href="./stylesheet/common.css">
     <link rel="stylesheet" href="./stylesheet/layout.css">
     <link rel="stylesheet" href="./stylesheet/spider.css">
